-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Lastes Master : a13fc434c57fd7 (HEAD -> master01, origin/master, origin/HEAD, master) LU-17662 osd-zfs: Support for ZFS 2.2.3
Make fail for el9.2 (passes el9.1 and el9.3): https://build.whamcloud.com/job/lustre-reviews/104879/arch=x86_64,build_type=client,distro=el9.2,ib_stack=inkernel/console
[...] 13:57:58 /tmp/rpmbuild-lustre-jenkins-HR3l5qx7/BUILD/lustre-2.15.63_48_gdac2c5d/lnet/klnds/in-kernel-o2iblnd/o2iblnd_cb.c:1485:19: error: array subscript 'struct sockaddr_in6[0]' is partly outside array bounds of 'struct sockaddr[1]' [-Werror=array-bounds] 13:57:58 1485 | sa->sin6_family = AF_INET6; 13:57:58 | ^~ 13:57:58 /tmp/rpmbuild-lustre-jenkins-HR3l5qx7/BUILD/lustre-2.15.63_48_gdac2c5d/lnet/klnds/in-kernel-o2iblnd/o2iblnd_cb.c:1458:25: note: while referencing 'srcaddr' 13:57:58 1458 | struct sockaddr srcaddr; 13:57:58 | ^~~~~~~ 13:57:58 /tmp/rpmbuild-lustre-jenkins-HR3l5qx7/BUILD/lustre-2.15.63_48_gdac2c5d/lnet/klnds/in-kernel-o2iblnd/o2iblnd_cb.c:1500:19: error: array subscript 'struct sockaddr_in6[0]' is partly outside array bounds of 'struct sockaddr[1]' [-Werror=array-bounds] 13:57:58 1500 | sa->sin6_family = AF_INET6; 13:57:58 | ^~ 13:57:58 /tmp/rpmbuild-lustre-jenkins-HR3l5qx7/BUILD/lustre-2.15.63_48_gdac2c5d/lnet/klnds/in-kernel-o2iblnd/o2iblnd_cb.c:1459:25: note: while referencing 'dstaddr' 13:57:58 1459 | struct sockaddr dstaddr; 13:57:58 | ^~~~~~~ 13:57:58 /tmp/rpmbuild-lustre-jenkins-HR3l5qx7/BUILD/lustre-2.15.63_48_gdac2c5d/lnet/klnds/in-kernel-o2iblnd/o2iblnd_cb.c:1501:19: error: array subscript 'struct sockaddr_in6[0]' is partly outside array bounds of 'struct sockaddr[1]' [-Werror=array-bounds] 13:57:58 1501 | sa->sin6_port = htons(*kiblnd_tunables.kib_service); 13:57:58 | ^~ 13:57:58 /tmp/rpmbuild-lustre-jenkins-HR3l5qx7/BUILD/lustre-2.15.63_48_gdac2c5d/lnet/klnds/in-kernel-o2iblnd/o2iblnd_cb.c:1459:25: note: while referencing 'dstaddr' 13:57:58 1459 | struct sockaddr dstaddr; 13:57:58 | ^~~~~~~ 13:57:58 cc1: all warnings being treated as errors
- is related to
-
LU-10391 LNET: Support IPv6
-
- Resolved
-